--- a/main/resources/view/Department.fxml
+++ b/main/resources/view/Department.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -52,13 +53,13 @@
                     <Font name="System Bold" size="12.0" />
                 </font>
             </Label>
-            <TextField fx:id="txtEmployeeId" promptText="Enter Employee ID" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             <Label fx:id="lblDepartmentId" text="1" textFill="black" GridPane.columnIndex="1">
                 <font>
                     <Font name="System Bold" size="12.0" />
                 </font>
             </Label>
+         <ComboBox fx:id="cmbEID" prefHeight="25.0" prefWidth="299.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
             <rowConstraints>
                 <RowConstraints />
