--- a/main/resources/view/Leaves.fxml
+++ b/main/resources/view/Leaves.fxml
@@ -2,10 +2,11 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -57,12 +58,11 @@
                 <Label fx:id="lblLeaveId" text="1" textFill="black" GridPane.columnIndex="1">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-
-                <TextField fx:id="txtEmployeeId" promptText="eg:E001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                <TextField fx:id="txtStatus" promptText="Approved/Pending/Rejected" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                <TextField fx:id="txtLeaveType" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                <TextField fx:id="txtStartDate" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <TextField fx:id="txtEndDate" promptText="yyyy-mm-dd" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+            <ComboBox fx:id="cmbEId" prefHeight="25.0" prefWidth="302.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cmbLeaveType" prefHeight="25.0" prefWidth="375.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <ComboBox fx:id="cmbStatus" prefHeight="25.0" prefWidth="301.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <DatePicker fx:id="dateStart" prefHeight="25.0" prefWidth="366.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <DatePicker fx:id="dateEnd" prefHeight="25.0" prefWidth="301.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
 
                 <rowConstraints>
                     <RowConstraints />
