--- a/main/resources/view/Ot.fxml
+++ b/main/resources/view/Ot.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -28,7 +29,7 @@
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" prefWidth="100.0" />
                     <ColumnConstraints prefWidth="300.0" />
-               <ColumnConstraints prefWidth="100.0" />
+               <ColumnConstraints prefWidth="150.0" />
                <ColumnConstraints prefWidth="300.0" />
                 </columnConstraints>
 
@@ -43,14 +44,6 @@
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
-                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
-
-                <Label prefHeight="17.0" prefWidth="93.0" text="Salary ID:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="1">
-                    <font>
-                        <Font name="System Bold" size="12.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="txtSalaryId" promptText=" " GridPane.columnIndex="3" GridPane.rowIndex="1" />
 
                 <Label prefHeight="17.0" prefWidth="89.0" text="OT Hours:" textFill="BLACK" GridPane.rowIndex="3">
                     <font>
@@ -73,6 +66,7 @@
                 </Label>
                 <TextField fx:id="txtOtDate" GridPane.columnIndex="3" GridPane.rowIndex="3" />
             <Label fx:id="lblOtId" prefHeight="17.0" prefWidth="112.0" text="01" GridPane.columnIndex="1" />
+            <ComboBox fx:id="cmbEID" prefHeight="25.0" prefWidth="332.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <rowConstraints>
                     <RowConstraints />
@@ -95,10 +89,10 @@
                 <columns>
                     <TableColumn fx:id="colOtId" prefWidth="100" text="OT ID" />
                     <TableColumn fx:id="colEmployeeId" prefWidth="123.33334350585938" text="Employee ID" />
-                    <TableColumn fx:id="colSalaryId" prefWidth="154.0" text="Salary ID" />
                     <TableColumn fx:id="colOtHours" prefWidth="157.3333740234375" text="OT Hours" />
                     <TableColumn fx:id="colRatePerHour" prefWidth="134.0" text="Rate/Hour" />
                     <TableColumn fx:id="colOtDate" prefWidth="167.333251953125" text="OT Date" />
+               <TableColumn fx:id="colPayment" prefWidth="152.66670735677087" text="OverTime Payment" />
                 </columns>
             </TableView>
         </VBox>
