--- a/main/resources/view/Task.fxml
+++ b/main/resources/view/Task.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -45,7 +47,6 @@
                 <Label text="Employee ID:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="1">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtEmployeeId" prefHeight="25.0" prefWidth="333.0" promptText="E001" GridPane.columnIndex="3" GridPane.rowIndex="1" />
 
                 <Label text="Description:" textFill="black" GridPane.columnIndex="2" GridPane.rowIndex="3">
                     <font><Font name="System Bold" size="12.0" /></font>
@@ -55,12 +56,13 @@
                 <Label prefHeight="17.0" prefWidth="67.0" text="Deadline:" textFill="black" GridPane.rowIndex="1">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtDeadline" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label prefHeight="17.0" prefWidth="67.0" text="Status:" textFill="black" GridPane.rowIndex="3">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-                <TextField fx:id="txtStatus" promptText="complete / pending" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="cmbEID" prefHeight="25.0" prefWidth="373.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <DatePicker fx:id="dateDeadline" prefHeight="25.0" prefWidth="357.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="cmbStatus" prefHeight="25.0" prefWidth="358.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
                 <rowConstraints>
                     <RowConstraints />
@@ -76,7 +78,7 @@
             </VBox.margin>
             </GridPane>
 
-            <HBox alignment="CENTER" prefHeight="37.0" prefWidth="1098.0" spacing="15">
+               <HBox alignment="CENTER" prefHeight="37.0" prefWidth="1098.0" spacing="15">
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #2ecc71; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
                 <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
                 <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
