--- a/main/resources/view/Equipment.fxml
+++ b/main/resources/view/Equipment.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -40,9 +41,9 @@
                 <TextField fx:id="txtEquipmentName" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label style="-fx-font-weight: bold;" text="Employee ID:" textFill="black" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                 <Label fx:id="lblEquipment" style="-fx-font-weight: bold;" text="1" textFill="black" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <ComboBox fx:id="cmbEId" prefHeight="25.0" prefWidth="357.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
                 <rowConstraints>
                     <RowConstraints />
