--- a/main/resources/view/Ot.fxml
+++ b/main/resources/view/Ot.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -64,9 +65,9 @@
                         <Font name="System Bold" size="12.0" />
                     </font>
                 </Label>
-                <TextField fx:id="txtOtDate" GridPane.columnIndex="3" GridPane.rowIndex="3" />
             <Label fx:id="lblOtId" prefHeight="17.0" prefWidth="112.0" text="01" GridPane.columnIndex="1" />
             <ComboBox fx:id="cmbEID" prefHeight="25.0" prefWidth="332.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <DatePicker fx:id="dateOt" prefHeight="25.0" prefWidth="360.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
 
                 <rowConstraints>
                     <RowConstraints />
