--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -22,7 +21,7 @@
                 <Insets bottom="20" left="20" right="20" top="20" />
             </padding>
 
-            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="Salary Management" textFill="#1d1570">
+            <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: black;" text="Salary Management System" textFill="#1d1570">
                 <font>
                     <Font name="System Bold" size="22.0" />
                 </font>
@@ -35,8 +34,8 @@
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" prefWidth="150.0" />
                     <ColumnConstraints prefWidth="300.0" />
-               <ColumnConstraints prefWidth="150.0" />
-               <ColumnConstraints prefWidth="300.0" />
+                    <ColumnConstraints prefWidth="150.0" />
+                    <ColumnConstraints prefWidth="300.0" />
                 </columnConstraints>
 
                 <Label prefHeight="17.0" prefWidth="103.0" text="Salary ID:" textFill="BLACK" GridPane.columnIndex="0" GridPane.rowIndex="0">
@@ -47,50 +46,11 @@
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
 
-                <Label prefHeight="17.0" prefWidth="103.0" text="Basic Salary:" textFill="BLACK" GridPane.rowIndex="3">
-                    <font><Font name="System Bold" size="12.0" /></font>
-                </Label>
-                <TextField fx:id="txtBasicSalary" prefHeight="28.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-
-                <Label prefHeight="17.0" prefWidth="111.0" text="Overtime Payment:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="3">
-                    <font><Font name="System Bold" size="12.0" /></font>
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-                </Label>
-                <TextField fx:id="txtOtHours" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-
-                <Label prefHeight="17.0" prefWidth="103.0" text="Total Deductions:" textFill="BLACK" GridPane.rowIndex="6">
-                    <font><Font name="System Bold" size="12.0" /></font>
-                </Label>
-                <TextField fx:id="txtDeduction" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-
-                <Label text="Deduction Type:" textFill="BLACK" GridPane.columnIndex="2" GridPane.rowIndex="6">
-                    <font><Font name="System Bold" size="12.0" /></font>
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-                </Label>
-                <TextField fx:id="txtDeductionType" prefHeight="84.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-
-                <Label prefHeight="17.0" prefWidth="103.0" text="Net Salary:" textFill="BLACK" GridPane.rowIndex="10">
-                    <font><Font name="System Bold" size="12.0" /></font>
-                </Label>
-                <TextField fx:id="txtNetSalary" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-
                 <Label fx:id="lblSalaryId" text="1" textFill="BLACK" GridPane.columnIndex="1" GridPane.rowIndex="0">
                     <font><Font name="System Bold" size="12.0" /></font>
                 </Label>
-            <ComboBox fx:id="cmbEmployeeId" onAction="#cmbEIDOnAction" prefHeight="25.0" prefWidth="376.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label prefHeight="12.0" prefWidth="111.0" text="Employee Name" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-            </Label>
-            <TextField fx:id="txtEmployeeName" onAction="#txtEmployeeNameOnAction" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+
+                <ComboBox fx:id="cmbEmployeeId" onAction="#cmbEIDOnAction" prefHeight="25.0" prefWidth="376.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <rowConstraints>
                     <RowConstraints />
@@ -99,17 +59,20 @@
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
-                    <RowConstraints maxHeight="25.33333333333333" minHeight="25.33333333333333" prefHeight="25.33333333333333" />
-               <RowConstraints />
-               <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
-               <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
-               <RowConstraints />
-               <RowConstraints />
+                    <RowConstraints maxHeight="25.33" minHeight="25.33" prefHeight="25.33" />
+                    <RowConstraints />
+                    <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                    <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" />
+                    <RowConstraints />
+                    <RowConstraints />
                 </rowConstraints>
             </GridPane>
 
-            <HBox alignment="CENTER" spacing="15">
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="132.0" text="Generate Pay Sheet" />
+            <HBox alignment="CENTER" prefHeight="44.0" prefWidth="1132.0" spacing="15">
+                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="132.0" style="-fx-background-color: #2c3e50;" text="Generate Report" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font></Button>
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #00b894; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
                 <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
                 <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
@@ -119,12 +82,13 @@
             <TableView fx:id="tblSalary" onMouseClicked="#onClickTable" prefHeight="323.0" prefWidth="1123.0">
                 <columns>
                     <TableColumn fx:id="colSalaryId" prefWidth="91.33" text="Salary ID" />
-                    <TableColumn fx:id="colEmployeeId" prefWidth="93.3333740234375" text="Employee ID" />
-                    <TableColumn fx:id="colBasicSalary" prefWidth="98.00003051757812" text="Basic Salary" />
-                    <TableColumn fx:id="colOtHours" prefWidth="136.00006103515625" text="Overtime Payment" />
-                    <TableColumn fx:id="colDeduction" prefWidth="133.33340454101562" text="Total Deductions" />
-                    <TableColumn fx:id="colDeductionType" prefWidth="136.6666259765625" text="Deduction Type" />
-                    <TableColumn fx:id="colNetSalary" prefWidth="231.99993896484375" text="Net Salary" />
+                    <TableColumn fx:id="colEmployeeId" prefWidth="93.33" text="Employee ID" />
+                    <TableColumn fx:id="colEmployeeName" prefWidth="140.0" text="Employee Name" />
+                    <TableColumn fx:id="colBasicSalary" prefWidth="112.66665649414062" text="Basic Salary" />
+                    <TableColumn fx:id="colOtHours" prefWidth="140.00003051757812" text="Overtime Payment" />
+                    <TableColumn fx:id="colDeduction" prefWidth="141.3333740234375" text="Total Deductions" />
+                    <TableColumn fx:id="colDeductionType" prefWidth="148.0" text="Deduction Type" />
+                    <TableColumn fx:id="colNetSalary" prefWidth="210.00006103515625" text="Net Salary" />
                 </columns>
             </TableView>
         </VBox>
