--- a/main/resources/view/Employee.fxml
+++ b/main/resources/view/Employee.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -18,9 +17,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="697.0" prefWidth="1233.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
+<AnchorPane prefHeight="697.0" prefWidth="1246.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.EmployeeController">
    <children>
-      <VBox layoutX="-12.0" layoutY="-2.0" prefHeight="714.0" prefWidth="1248.0" spacing="15.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-15.0" AnchorPane.leftAnchor="-12.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="-2.0">
+      <VBox layoutX="-32.0" layoutY="-2.0" prefHeight="714.0" prefWidth="1290.0" spacing="15.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-15.0" AnchorPane.leftAnchor="-12.0" AnchorPane.rightAnchor="-45.0" AnchorPane.topAnchor="-2.0">
 
          <padding>
             <Insets bottom="10" left="10" right="10" top="10" />
@@ -110,16 +109,17 @@
          <TableView fx:id="tblEmployees" onMouseClicked="#onClickTable" prefHeight="379.0" prefWidth="1213.0" style="-fx-border-color: lightgray;">
             <columns>
                <TableColumn fx:id="colEmpId" text="Emp ID" />
-               <TableColumn fx:id="colFirstName" text="First Name" />
-               <TableColumn fx:id="colLastName" text="Last Name" />
-               <TableColumn fx:id="colDeptId" text="Dept ID" />
-               <TableColumn fx:id="colDOB" text="DOB" />
-               <TableColumn fx:id="colAddress" text="Address" />
+               <TableColumn fx:id="colFirstName" prefWidth="86.00000762939453" text="First Name" />
+               <TableColumn fx:id="colLastName" prefWidth="79.33329772949219" text="Last Name" />
+               <TableColumn fx:id="colDeptId" prefWidth="62.000030517578125" text="Dept ID" />
+               <TableColumn fx:id="colDOB" prefWidth="66.00006103515625" text="DOB" />
+               <TableColumn fx:id="colAddress" prefWidth="108.66668701171875" text="Address" />
                <TableColumn fx:id="colJoinDate" text="Join Date" />
-               <TableColumn fx:id="colAge" text="Age" />
-               <TableColumn fx:id="colEmail" text="Email" />
-               <TableColumn fx:id="colContact" text="Contact" />
-               <TableColumn fx:id="colPositionId" text="Position ID" />
+               <TableColumn fx:id="colAge" prefWidth="52.0" text="Age" />
+               <TableColumn fx:id="colEmail" prefWidth="108.0" text="Email" />
+               <TableColumn fx:id="colContact" prefWidth="86.66668701171875" text="Contact" />
+               <TableColumn fx:id="colPositionId" prefWidth="87.33331298828125" text="Position ID" />
+               <TableColumn fx:id="colStatus" prefWidth="129.3333740234375" text="Status" />
             </columns>
 
             <VBox.margin>
