--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -69,17 +69,10 @@
             </GridPane>
 
             <HBox alignment="CENTER" prefHeight="44.0" prefWidth="1132.0" spacing="15">
-                <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="132.0" style="-fx-background-color: #2c3e50;" text="Generate Report" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Button>
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #00b894; -fx-text-fill: white; -fx-font-weight: bold;" text="Save" />
-                <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="100" style="-fx-background-color: #0984e3; -fx-text-fill: white; -fx-font-weight: bold;" text="Update" />
-                <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="100" style="-fx-background-color: #d63031; -fx-text-fill: white; -fx-font-weight: bold;" text="Delete" />
-                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #a55eea; -fx-text-fill: white; -fx-font-weight: bold;" text="Reset" />
             </HBox>
 
-            <TableView fx:id="tblSalary" onMouseClicked="#onClickTable" prefHeight="323.0" prefWidth="1123.0">
+            <TableView fx:id="tblSalary"  prefHeight="323.0" prefWidth="1123.0">
                 <columns>
                     <TableColumn fx:id="colSalaryId" prefWidth="91.33" text="Salary ID" />
                     <TableColumn fx:id="colEmployeeId" prefWidth="93.33" text="Employee ID" />
